clusters/quantika/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.indeweygerlings.com
spec:
  ingressClassName: traefik
  rules:
  - host: nginx.indeweygerlings.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
